@@ -1,175 +1,0 @@
-@comment $NetBSD: PLIST,v 1.28 2020/05/17 23:55:49 nia Exp $
-bin/bonobo-browser
-bin/test-moniker
-include/libbonoboui-2.0/bonobo.h
-include/libbonoboui-2.0/bonobo/bonobo-canvas-component.h
-include/libbonoboui-2.0/bonobo/bonobo-canvas-item.h
-include/libbonoboui-2.0/bonobo/bonobo-control-frame.h
-include/libbonoboui-2.0/bonobo/bonobo-control.h
-include/libbonoboui-2.0/bonobo/bonobo-dock-band.h
-include/libbonoboui-2.0/bonobo/bonobo-dock-item.h
-include/libbonoboui-2.0/bonobo/bonobo-dock-layout.h
-include/libbonoboui-2.0/bonobo/bonobo-dock.h
-include/libbonoboui-2.0/bonobo/bonobo-file-selector-util.h
-include/libbonoboui-2.0/bonobo/bonobo-plug.h
-include/libbonoboui-2.0/bonobo/bonobo-property-control.h
-include/libbonoboui-2.0/bonobo/bonobo-selector-widget.h
-include/libbonoboui-2.0/bonobo/bonobo-selector.h
-include/libbonoboui-2.0/bonobo/bonobo-socket.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-component.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-config-widget.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-container.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-engine.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-main.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-node.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-sync.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-toolbar-button-item.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-toolbar-item.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-toolbar-toggle-button-item.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-toolbar.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-type-builtins.h
-include/libbonoboui-2.0/bonobo/bonobo-ui-util.h
-include/libbonoboui-2.0/bonobo/bonobo-widget.h
-include/libbonoboui-2.0/bonobo/bonobo-window.h
-include/libbonoboui-2.0/bonobo/bonobo-zoomable-frame.h
-include/libbonoboui-2.0/bonobo/bonobo-zoomable.h
-include/libbonoboui-2.0/libbonoboui.h
-lib/bonobo-2.0/samples/bonobo-sample-controls-2
-lib/bonobo/servers/Bonobo_Sample_Controls.server
-lib/bonobo/servers/CanvDemo.server
-lib/libbonoboui-2.la
-lib/libglade/2.0/libbonobo.la
-lib/pkgconfig/libbonoboui-2.0.pc
-share/applications/bonobo-browser.desktop
-share/gnome-2.0/ui/Bonobo_Sample_Container-ui.xml
-share/gnome-2.0/ui/Bonobo_Sample_Hello.xml
-share/gnome-2.0/ui/bonobo-browser.xml
-share/gtk-doc/html/libbonoboui/bonobo-controls.html
-share/gtk-doc/html/libbonoboui/bonobo-support-utilities.html
-share/gtk-doc/html/libbonoboui/bonobo-ui.html
-share/gtk-doc/html/libbonoboui/ch01.html
-share/gtk-doc/html/libbonoboui/control-frame.png
-share/gtk-doc/html/libbonoboui/control.png
-share/gtk-doc/html/libbonoboui/home.png
-share/gtk-doc/html/libbonoboui/index.html
-share/gtk-doc/html/libbonoboui/index.sgml
-share/gtk-doc/html/libbonoboui/ix01.html
-share/gtk-doc/html/libbonoboui/left.png
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-a11y.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-control-frame.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-control.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-file-selector-util.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-plug.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-property-control.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-selector-widget.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-selector.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-socket.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-component.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-container.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-engine-config.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-engine.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-node.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-preferences.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-sync.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-ui-util.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-widget.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-window.html
-share/gtk-doc/html/libbonoboui/libbonoboui-bonobo-wrapper.html
-share/gtk-doc/html/libbonoboui/libbonoboui-faq.html
-share/gtk-doc/html/libbonoboui/libbonoboui.devhelp
-share/gtk-doc/html/libbonoboui/libbonoboui.devhelp2
-share/gtk-doc/html/libbonoboui/right.png
-share/gtk-doc/html/libbonoboui/style.css
-share/gtk-doc/html/libbonoboui/up.png
-share/locale/af/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/am/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ar/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/as/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ast/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/az/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/be/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/bg/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/bn/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/bn_IN/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/br/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/bs/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ca/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ca@valencia/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/cs/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/cy/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/da/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/de/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/dz/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/el/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/en@shaw/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/en_CA/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/en_GB/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/eo/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/es/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/et/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/eu/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/fa/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/fi/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/fr/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ga/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/gl/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/gu/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/he/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/hi/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/hr/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/hu/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/id/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/is/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/it/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ja/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ka/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/kn/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ko/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ku/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/li/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/lt/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/lv/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/mai/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/mg/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/mk/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ml/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/mn/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/mr/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ms/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/nb/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ne/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/nl/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/nn/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/nso/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/oc/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/or/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/pa/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/pl/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ps/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/pt/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/pt_BR/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ro/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ru/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/rw/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/si/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sk/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sl/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sq/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sr/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sr@ije/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sr@latin/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/sv/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ta/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/te/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/th/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/tr/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/ug/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/uk/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/vi/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/wa/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/xh/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/yi/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/zh_CN/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/zh_HK/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/zh_TW/LC_MESSAGES/libbonoboui-2.0.mo
-share/locale/zu/LC_MESSAGES/libbonoboui-2.0.mo
